Bug 44204 - LibO File dialog Title column width too big per default
Summary: LibO File dialog Title column width too big per default
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: Other All
: medium major
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2011-12-28 00:09 UTC by Robert Großkopf
Modified: 2011-12-28 09:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Dialog for opening documents under LO 3.5.0 Beta2 (32.28 KB, image/png)
2011-12-28 02:02 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2011-12-28 00:09:20 UTC
When I want to open a document or insert a picture the dialogs only show the title of the file, not how big it is, which date it is editet and so. This only appears when the original dialoges of LibreOffice are used.
Comment 1 Rainer Bielefeld Retired 2011-12-28 01:38:06 UTC
@reporter:
May I ask you to read  hints on <http://wiki.documentfoundation.org/BugReport> carefully?
Then please:
- Write a meaningful Summary describing exactly what the problem is (not 
  available? Hidden?)
- Attach a sample document (not only screenshot) if useful
- Attach screenshots with comments. Best way is to insert your screenshots
  into a DRAW document and to add comments that explain what you want to show
- Contribute a step by step instruction containing every key press and every 
  mouse click how to reproduce your problem (and if possible how to created a 
  sample document from the scratch)
- add information 
  -- what EXACTLY is unexpected (not available? Hidden? Columns too wide?)
  -- and WHY do you believe it's unexpected (cite Help or Documentation!)
  -- concerning your PC (video card, ...)
  -- concerning your OS (Version, Distribution, Language)
  -- concerning your LibO version and localization (UI language)
     did you really never observe that before?)
  –- Libo settings that might be related to your problems 
    (video hardware acceleration ...)
  -- how you launch LibO and how you opened the sample document
  –- If you can contribute an OOo Issue that might be useful
  -- everything else crossing your mind after you read linked texts
Comment 2 Robert Großkopf 2011-12-28 02:02:53 UTC
Created attachment 54882 [details]
Dialog for opening documents under LO 3.5.0 Beta2

You only see "Titel", nothing else. It could not be changed. There is no possibility under linux-rpm to change the dialogs to the system dialogs in the options.
With system dialogs all informations are shown (title, date ...)
Comment 3 Rainer Bielefeld Retired 2011-12-28 02:24:43 UTC
And when you increase width of dialog? With WIN the "hidden" additional columns will appear
Comment 4 Robert Großkopf 2011-12-28 02:54:09 UTC
You're right. I have not tried it. But why is the default value for the title so long?
When I open LibreOffice Beta2 after changing the width of the first column all columns appear in the normally width.
I had this behaviour a long time ago in OpenOffice, don't know which version it was. There I had to change the dialog-boxes to system-boxes to see all in the dialog.
Comment 5 Rainer Bielefeld Retired 2011-12-28 03:33:23 UTC
Yes, that's really not userfriendly. And I am pretty sure that that started in Master, I can not remember to have seen that bad default with 3.3 or 3.4.

@Christoph:
Are there general thoughts concerning some improvements like horizontal scroll bar, enable/disable/interchange columns, may be something else?

@Ivan:
Can you please check and make the defaults "release ready"? I remember that also WIN shows only the first column on my screen. But it seems that only the MSCV builds are affected, my MinGW builds have useful default column width. 

I believe for the "first view" it's better to have too small column width than the situation reporter's screenshot shows.
Comment 6 Ivan Timofeev (retired) 2011-12-28 07:49:48 UTC
Thank you for the report!
Most probably it is regression by http://cgit.freedesktop.org/libreoffice/core/commit/?id=94cc09fbd030c03eba8b41314cb5bf0356faaad7 .
3.4 is not affected.
Comment 7 Ivan Timofeev (retired) 2011-12-28 09:55:27 UTC
Fixed in 3.5 and master:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=f10fc42189b3d3f6dd180234da9777e53e92b7e4

[ I'm keeping my fingers crossed in the hope for that the commit will not break anything in 3.5... :) ]