fdo#44204: shrink the first column in the open dialog, remove unused flags